MarcoKitTests/TestData/error/number2.marco
--before
1.0.2

--after
3: Duplicating '.' in a number literal
